Completar funcionalidades
