# src/app/services/api/model/usuarioRespuestaGeneral.ts
@@ -1,0 +1,18 @@
+/**
+ * ApiEventos
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { Usuario } from './usuario';
+
+
+export interface UsuarioRespuestaGeneral { 
+    statusCode?: number;
+    message?: string | null;
+    data?: Usuario;
+}
+
